--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
+    "framer-motion": "^4.1.17",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@heroicons/react": "^1.0.1",
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
     "autoprefixer": "^10.2.5",
