--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^3.1.2",
     "@tailwindcss/forms": "^0.3.2",
+    "aes256": "^1.1.0",
+    "cookies": "^0.8.0",
+    "firebase-admin": "^9.8.0",
     "framer-motion": "^4.1.17",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-spinners": "^0.10.6"
   },
   "devDependencies": {
     "@heroicons/react": "^1.0.1",
