--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.3.2",
     "aes256": "^1.1.0",
     "cookies": "^0.8.0",
+    "dotenv": "^9.0.2",
     "firebase-admin": "^9.8.0",
     "framer-motion": "^4.1.17",
     "next": "10.2.0",
